--- a/FileSharingTest/FileSharingTest.vcxproj
+++ b/FileSharingTest/FileSharingTest.vcxproj
@@ -139,6 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Connessione.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Connessione.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
