--- a/PDSProjectGUI/PDSProjectGUI.csproj
+++ b/PDSProjectGUI/PDSProjectGUI.csproj
@@ -70,6 +70,12 @@
     <Compile Include="BlockUser.Designer.cs">
       <DependentUpon>BlockUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="ConnectionRejected.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConnectionRejected.Designer.cs">
+      <DependentUpon>ConnectionRejected.cs</DependentUpon>
+    </Compile>
     <Compile Include="IncomingConnection.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +97,12 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProgressBarDialogRic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProgressBarDialogRic.Designer.cs">
+      <DependentUpon>ProgressBarDialogRic.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProgressBarDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +132,9 @@
     <Compile Include="Share.Designer.cs">
       <DependentUpon>Share.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ConnectionRejected.resx">
+      <DependentUpon>ConnectionRejected.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FileDialog.resx">
       <DependentUpon>FileDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -128,6 +143,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProgressBarDialogRic.resx">
+      <DependentUpon>ProgressBarDialogRic.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProgressBarDialog.resx">
       <DependentUpon>ProgressBarDialog.cs</DependentUpon>
